--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -495,6 +495,27 @@
                         <TextBlock Text="About"
                                    FontSize="16"/>
                     </TabItem.Header>
+                    <StackPanel VerticalAlignment="Center"
+                                HorizontalAlignment="Left"
+                                Margin="20,0">
+                        <TextBlock FontFamily="Arial"
+                                   FontSize="16"
+                                   Margin="0,10"
+                                   HorizontalAlignment="Center"
+                                   FontWeight="SemiBold">
+                            © Hogwarts Vietnam
+                        </TextBlock>
+                        <TextBlock FontFamily="Arial"
+                                   FontSize="14"
+                                   Margin="0,5">
+                            Thanks to Minimaxir for his awesome scripts
+                        </TextBlock>
+                        <TextBlock FontFamily="Arial"
+                                   FontSize="14"
+                                   Margin="0,5">
+                            Thanks to I-know-who for inspiring me
+                        </TextBlock>
+                    </StackPanel>
                 </TabItem>
             </TabControl>
         </StackPanel>
